--- a/sites/configurations/goodmoves/partials/vacancy/gist.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/gist.hbs
@@ -14,10 +14,5 @@
       </div>
     </div>
   </div>
-  <hr class="mdc-list-divider">
-  <div class="mdc-card__actions">
-    <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
-      <a href="/vacancy/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
-    </div>
-  </div>
+  {{> vacancy_actions}}
 </div>
