--- a/sites/configurations/goodmoves/partials/vacancy/list.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/list.hbs
@@ -7,14 +7,5 @@
     </div>
   {{/if}}
   {{> vacancy_notes}}
-  <div class="mdc-card__actions">
-    <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
-      <a href="/vacancy/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
-    </div>
-    <div class="mdc-card__action-icons pull-right">
-      <div class="mdc-chip-set mdc-chip-set--filter">
-        {{> shortlist_chip id=Id}}
-      </div>
-    </div>
-  </div>
+  {{> vacancy_actions}}
 </div>
