--- a/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
@@ -7,5 +7,5 @@
     </div>
   {{/if}}
   {{> vacancy_notes limit="4rem"}}
-  {{> vacancy_actions}}
+  {{> vacancy_actions slug=slug Id=Id home_based=home_based distance=distance}}
 </div>
