--- a/sites/configurations/goodmoves/partials/vacancy/actions.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/actions.hbs
@@ -2,19 +2,19 @@
   <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
     {{#compare @root.route.name "===" "vacancy_search" ~}}
     {{#ifAll @root.request.params.query.location @root.request.params.query.lat @root.request.params.query.lng ~}}
-    {{#if ../home_based ~}}
+    {{#if home_based ~}}
     {{else}}
-    {{#if ../distance ~}}
+    {{#if distance ~}}
     <ul class="fa-ul mdc-card__action hide-sm">
       <li class="mdc-card__info--search-distance mdc-typography--body2">
         <span class="fa-li"><span class="far fa-location-arrow fa-fw" title="Distance"></span></span>
-        {{#compare ../distance "<" 4 ~}}
-          Less than {{inflect (round ../distance "up") "mile" "miles" true}} away
+        {{#compare distance "<" 4 ~}}
+          Less than {{inflect (round distance "up") "mile" "miles" true}} away
         {{else}}
-          {{#compare ../distance "<" 10 ~}}
-            Within {{round ../distance "up"}} miles
+          {{#compare distance "<" 10 ~}}
+            Within {{round distance "up"}} miles
           {{else}}
-            {{round ../distance "up"}} miles away
+            {{round distance "up"}} miles away
           {{/compare ~}}
         {{/compare ~}}
       </li>
@@ -23,16 +23,16 @@
     {{/if ~}}
     {{/ifAll ~}}
     {{/compare ~}}
-    <a href="/vacancy/{{../slug}}{{@root.request.url.search}}" class="mdc-card__action hide-sm">Find out more</a>
-    <a href="/vacancy/{{../slug}}{{@root.request.url.search}}" class="mdc-card__action hide-md hide-lg"><span class="fal fa-info-circle fa-fw fa-2x" aria-hidden="true"></span></a>
-    {{#compare (trim (getProperty @root.data.notes ../Id)) "!==" "" ~}}
-    <a href="/vacancy/{{../slug}}{{@root.request.url.search}}#notes" class="mdc-card__action hide-sm">Your notes</a>
-    <a href="/vacancy/{{../slug}}{{@root.request.url.search}}#notes" class="mdc-card__action hide-md hide-lg"><span class="fal fa-edit fa-fw fa-2x" aria-hidden="true"></span></a>
+    <a href="/vacancy/{{slug}}{{@root.request.url.search}}" class="mdc-card__action hide-sm">Find out more</a>
+    <a href="/vacancy/{{slug}}{{@root.request.url.search}}" class="mdc-card__action hide-md hide-lg"><span class="fal fa-info-circle fa-fw fa-2x" aria-hidden="true"></span></a>
+    {{#compare (trim (getProperty @root.data.notes Id)) "!==" "" ~}}
+    <a href="/vacancy/{{slug}}{{@root.request.url.search}}#notes" class="mdc-card__action mdc-card__action-notes hide-sm">Your notes</a>
+    <a href="/vacancy/{{slug}}{{@root.request.url.search}}#notes" class="mdc-card__action mdc-card__action-notes hide-md hide-lg"><span class="fal fa-edit fa-fw fa-2x" aria-hidden="true"></span></a>
     {{/compare ~}}
   </div>
   <div class="mdc-card__action-icons pull-right">
     <div class="mdc-chip-set mdc-chip-set--filter">
-      {{> shortlist_chip id=../Id}}
+      {{> shortlist_chip id=Id}}
     </div>
   </div>
 </div>
