--- a/sites/configurations/goodmoves/partials/vacancy/gist.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/gist.hbs
@@ -14,5 +14,5 @@
       </div>
     </div>
   </div>
-  {{> vacancy_actions}}
+  {{> vacancy_actions slug=slug Id=Id home_based=home_based distance=distance}}
 </div>
