--- a/sites/configurations/goodmoves/partials/search-info.hbs
+++ b/sites/configurations/goodmoves/partials/search-info.hbs
@@ -7,7 +7,7 @@
   {{#compare @root.request.params.path "===" "search" ~}}
   <a href="/map{{@root.request.url.search}}" class="pull-right">
     <span class="far fa-map-marker-alt fa-fw mdc-list-item__graphic" title="Map"></span>
-    <span class="underline">Show {{inflect paging.totalResults "vacancy" "vacancies"}} on map</a>
+    <span class="underline">Show {{inflect paging.totalResults "job" "jobs"}} on map</a>
   </a>
   {{/compare ~}}
 </div>
