--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1682,12 +1682,12 @@ body {
     padding: $unit;
   }
   .mdc-card__media--organisation {
-    max-width: 120px;
-    max-height: 120px;
+    max-width: 150px;
+    max-height: 150px;
     /*height: auto;*/
     display: flex;
     align-items: flex-start;
-    margin: $unit/2 0 0 $unit;
+    margin: $unit/2 $unit/2 0 $unit/2;
     padding: 0;
     img {
       width: 100%;
