--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1069,10 +1069,9 @@ a {
     }
   }
 }
-.goodmoves-vacancy.mdc-card.gist {
-  .mdc-card__action-icons {
-    display: none;
-  }
+.goodmoves-vacancy.mdc-card.list .mdc-card__action-notes,
+.goodmoves-vacancy.mdc-card.gist .mdc-card__action-icons {
+  display: none;
 }
 // .goodmoves-vacancy-inactive.mdc-card,
 // .goodmoves-vacancy-not-published.mdc-card,
