--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -214,15 +214,6 @@
         </div>
       </div>
     </div>
-    <div class="mdc-card__actions">
-      <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
-        <a href="/organisation/{{organisation.slug}}" class="mdc-card__action">Find out more about {{organisation.name}}</a>
-      </div>
-      <div class="mdc-card__action-icons pull-right">
-        <div class="mdc-chip-set mdc-chip-set--filter">
-          {{> shortlist_chip id=Id}}
-        </div>
-      </div>
-    </div>
+    {{> vacancy_actions slug=slug Id=Id}}
   </div>
 </div>
