--- a/sites/configurations/goodmoves/partials/vacancy/list.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/list.hbs
@@ -7,5 +7,5 @@
   {{else}}
     {{> vacancy_description limit="8rem" description=description}}
   {{/compare ~}}
-  {{> vacancy_actions slug=slug Id=Id home_based=home_based distance=distance}}
+  {{> vacancy_actions slug=slug Id=Id}}
 </div>
