--- a/sites/configurations/goodmoves/partials/vacancy/mini.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/mini.hbs
@@ -1,4 +1,4 @@
 <div class="mdc-card goodmoves-vacancy mini{{if top_job " top-job"}}" data-vacancy-id="{{Id}}">
   {{> vacancy_key_info}}
-  {{> vacancy_actions slug=slug Id=Id home_based=home_based distance=distance}}
+  {{> vacancy_actions slug=slug Id=Id}}
 </div>
