--- a/sites/configurations/fundingscotland/templates/funds/search.hbs
+++ b/sites/configurations/fundingscotland/templates/funds/search.hbs
@@ -1,5 +1,9 @@
+{{#if @root.data.auth ~}}
 {{> fund_search_form this instance_id="perm"}}
 
 <div id="detailed-results-container" class="container-content fundingscotland-fund-search">
   {{> fund_search_results this}}
 </div>
+{{else}}
+{{> account_redirect_home}}
+{{/if ~}}
