--- a/sites/configurations/goodmoves/templates/account/sign-out.hbs
+++ b/sites/configurations/goodmoves/templates/account/sign-out.hbs
@@ -1,4 +1,4 @@
-{{> sign_out_loader}}
+{{> account_sign_out_loader}}
 <script>
 document.addEventListener("DOMContentLoaded", function(event) {
   window.setTimeout(function() {
