--- a/sites/configurations/fundingscotland/layouts/default.hbs
+++ b/sites/configurations/fundingscotland/layouts/default.hbs
@@ -37,15 +37,17 @@
 <meta name="msapplication-TileImage" content="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/fundingscotland/ms-icon-144x144.png">
 <meta name="theme-color" content="#3c7524">
 <link rel="search" type="application/opensearchdescription+xml" title="Funding Scotland" href="/assets/opensearch.xml" />
+
+<link rel="canonical" href="https://fundingscotland.com{{request.params.uri.pathname}}" />
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-6"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-12"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 
 // NEEDS TO BE SET UP WITH THE CORRECT TRACKING ID
-gtag('config', 'UA-3467930-6', { 'send_page_view': true, 'anonymize_ip': true });
+gtag('config', 'UA-3467930-12', { 'send_page_view': true, 'anonymize_ip': true });
 
 {{#each route.primaryResponse.hits.hits ~}}
 gtag('event', 'document_hit', {
@@ -54,12 +56,15 @@ gtag('event', 'document_hit', {
 });
 {{/each ~}}
 
-{{#ifAny request.params.query.debug (compare request.url.hostname "fundingscotland.local") ~}}
+{{#ifAny request.params.query.debug (compare request.url.hostname "goodmoves.local") ~}}
 console.log('#### DEBUG MODE ON ####');
 console.log('Request:', {{{regexReplace (regexReplace (stringify request) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
 console.log('Route:', {{{regexReplace (regexReplace (stringify route) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
 console.log('Data:', {{{regexReplace (regexReplace (stringify data) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
-console.log('Menus:', {{{regexReplace (regexReplace (stringify context.metaData.menus) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+console.log('Menus:', {{{regexReplace (regexReplace (stringify @root.context.metaData.menus) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+{{#if errors.[0]}}
+  console.error('Task Errors:', {{{regexReplace (regexReplace (stringify errors) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
+{{/if}}
 {{/ifAny ~}}
 </script>
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
@@ -73,6 +78,13 @@ if(location.host.indexOf('.local') > -1){
 <body class="mdc-theme--site-bg {{#if request.params.path}}{{replace request.params.path '_' ' '}}{{else}}home{{/if}}">
   <fundingscotland-site>
     <div class="mdc-typography">
+      {{#ifAny request.params.query.debug (compare request.url.hostname "goodmoves.local") ~}}
+        {{#if errors.[0]}}
+          <div style="z-index:100;position:fixed;top:0;right:0;padding:5px;background-color:#ff0000;color:#ffffff;">
+            Route Task Errors (F12)
+          </div>
+        {{/if}}
+      {{/ifAny}}
       <header class="mdc-top-app-bar mdc-elevation--z5 top-bar-stuck" id="top-bar">
         <div class="container-fluid">
           <div class="mdc-top-app-bar__row mdc-top-app-bar__upper">
@@ -124,38 +136,25 @@ if(location.host.indexOf('.local') > -1){
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end mdc-top-app-bar__user">
               <div class="mdc-menu-anchor">
                 <!-- Logged in: -->
+                {{#if data.auth.email ~}}
                 <button class="mdc-button" data-menu-target="#user-menu">
                   <span class="far fa-fw fa-user-circle"></span>
-                  {{#if data.auth.email}}
                     {{data.auth.email}}
-                  {{else}}
-                    Not logged in
-                  {{/if}}
                   <span class="far fa-fw fa-angle-down"></span>
                 </button>
                 <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="user-menu">
                   <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
-                    {{#if data.auth.email}}
-                      {{#each context.metaData.menus.user ~}}
-                      <a class="mdc-list-item {{#if (regexMatch ../request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" href="{{stripTrailingSlash path}}" role="menuitem">
-                        {{#if icon ~}}
-                        <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
-                        {{/if ~}}
-                        {{{label}}}
-                      </a>
-                      {{/each ~}}
-                    {{else}}
-                      {{#each context.metaData.menus.unauthenticated ~}}
-                      <a class="mdc-list-item {{#if (regexMatch ../request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" href="{{stripTrailingSlash path}}" role="menuitem">
-                        {{#if icon ~}}
-                        <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
-                        {{/if ~}}
-                        {{{label}}}
-                      </a>
-                      {{/each ~}}
-                    {{/if}}
+                    {{#each context.metaData.menus.user ~}}
+                    <a class="mdc-list-item {{#if (regexMatch ../request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" href="{{stripTrailingSlash path}}" role="menuitem">
+                      {{#if icon ~}}
+                      <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
+                      {{/if ~}}
+                      {{{label}}}
+                    </a>
+                    {{/each ~}}
                   </div>
                 </div>
+                {{/if ~}}
               </div>
             </section>
           </div>
@@ -225,20 +224,20 @@ if(location.host.indexOf('.local') > -1){
                     </li>
                   </ul>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone info">
-                  <h3>Information</h3>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone help">
+                  <h3>Help</h3>
                   <ul class="mdc-list">
-                    {{#each context.metaData.menus.footer-info ~}}
+                    {{#each context.metaData.menus.footer-help ~}}
                     <li class="mdc-list-item">
                       <a href="{{path}}">{{{label}}}</a>
                     </li>
                     {{/each ~}}
                   </ul>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone help">
-                  <h3>Help</h3>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone info">
+                  <h3>Information</h3>
                   <ul class="mdc-list">
-                    {{#each context.metaData.menus.footer-help ~}}
+                    {{#each context.metaData.menus.footer-info ~}}
                     <li class="mdc-list-item">
                       <a href="{{path}}">{{{label}}}</a>
                     </li>
@@ -277,7 +276,9 @@ if(location.host.indexOf('.local') > -1){
       </footer>
     </div>
   </fundingscotland-site>
-  <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="/assets/js/headroom.min.js"></script>
   {{#if (contains request.url.host '.local')}}
@@ -287,6 +288,16 @@ if(location.host.indexOf('.local') > -1){
   {{/if}}
   <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@7/dist/polyfill.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/string.js/3.3.3/string.min.js"></script>
+  <script type="text/javascript">
+  var $buoop = {required:{e:-3,f:-3,o:-3,s:-1,c:-3},insecure:true,unsupported:true,api:2018.07 };
+  function $buo_f(){
+   var e = document.createElement("script");
+   e.src = "//browser-update.org/update.min.js";
+   document.body.appendChild(e);
+  };
+  try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
+  catch(e){window.attachEvent("onload", $buo_f)}
+  </script>
   <script type="text/javascript" id="cookieinfo" src="/assets/js/cookieinfo.min.js" data-message="We use cookies to track anonymous usage statistics and do not collect any personal information that can be used to identify you. By continuing to visit this site you agree to our use of cookies." data-moreinfo="/cookies" data-cookie="CookieInfoScript" data-text-align="left"></script>
   <script type="text/javascript" src="/assets/js/fundingscotland/main.js"></script>
   {{{layoutParts.foot}}}
