--- a/sites/configurations/fundingscotland/partials/account/sign-up.hbs
+++ b/sites/configurations/fundingscotland/partials/account/sign-up.hbs
@@ -1,30 +1,21 @@
-{{#if @root.data.auth ~}}
-{{> account_sign_out_loader}}
-<script>
-  document.addEventListener("DOMContentLoaded", function(event) {
-    window.setTimeout(function() {
-      window.location.href = '/';
-    }, 100);
-  });
-</script>
-{{else}}
 <form id="sign-up-form" method="POST" class="sign-in-form sign-up-form">
   <div class="mdc-card mdc-elevation--z0">
     <div class="mdc-card__info--vacancy">
-      <div class="mdc-card__info--vacancy-title mdc-typography--headline4 x-padding">
+      <div class="mdc-card__info--vacancy-title mdc-typography--headline4">
         Sign up
       </div>
     </div>
     <div class="mdc-card__info x-padding-full mdc-theme--primary-bg mdc-theme--on-primary" id="sign-up-message">
       <span id="form-message"></span>
     </div>
-    <div class="mdc-card__info x-padding-full">
+    <div class="mdc-card__info">
       <div class="mdc-typography--body1" id="form-section-email">
-        {{> account_sign_in_social loaderSelector="#sign-up-loader" messageSelector="#sign-up-message"}}
+        <!-- {{> account_sign_in_social loaderSelector="#sign-up-loader" messageSelector="#sign-up-message"}}
 
         <div class="middle-line-text">
           <span>or</span>
-        </div>
+        </div> -->
+
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
           <input type="text" id="sign-up-email" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
@@ -63,9 +54,6 @@
         <button class="mdc-button mdc-button--raised" type="submit" id="sign-up-submit">
           Sign up
         </button>
-        <div class="mdc-typography--body1 v-margin-full">
-          Already have an account? <a href="/sign-in">Sign in</a>
-        </div>
       </div>
       <div class="card-loader" id="sign-up-loader">
         <div class="card-loader-inner">
@@ -111,7 +99,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
         console.log('Registered user:', user);
         user.user.getIdTokenResult().then(function(idTokenResult) {
           console.log('ID Token Result', idTokenResult);
-          goodmoves.setCookie('gm_token', idTokenResult.token, 7);
+          goodmoves.setCookie('fs_token', idTokenResult.token, 7);
           window.location.href = '/';
         });
       } else {
@@ -125,4 +113,3 @@ document.addEventListener("DOMContentLoaded", function(event) {
   });
 });
 </script>
-{{/if ~}}
