--- a/sites/configurations/fundingscotland/templates/funders/search.hbs
+++ b/sites/configurations/fundingscotland/templates/funders/search.hbs
@@ -1,5 +1,9 @@
+{{#if @root.data.auth ~}}
 {{> funder_search_form this instance_id="perm"}}
 
 <div id="detailed-results-container" class="container-content fundingscotland-organisation-search">
   {{> funder_search_results this}}
 </div>
+{{else}}
+{{> account_redirect_home}}
+{{/if ~}}
