--- a/sites/configurations/fundingscotland/templates/funds/fund.hbs
+++ b/sites/configurations/fundingscotland/templates/funds/fund.hbs
@@ -1,3 +1,4 @@
+{{#if @root.data.auth ~}}
 {{> fund_search_form this instance_id="perm"}}
 
 <div class="container-content">
@@ -30,3 +31,6 @@
   </p>
   {{/compare}}
 </div>
+{{else}}
+{{> account_redirect_home}}
+{{/if ~}}
