--- a/sites/configurations/fundingscotland/templates/pages/browse.hbs
+++ b/sites/configurations/fundingscotland/templates/pages/browse.hbs
@@ -1,3 +1,4 @@
+{{#if @root.data.auth ~}}
 <div class="container-fluid">
   <div class="mdc-layout-grid home-jobs">
     <div class="mdc-layout-grid__inner">
@@ -42,3 +43,6 @@
     </div>
   </div>
 </div>
+{{else}}
+{{> account_redirect_home}}
+{{/if ~}}
