--- a/sites/configurations/goodmoves/templates/account/sign-in.hbs
+++ b/sites/configurations/goodmoves/templates/account/sign-in.hbs
@@ -1,5 +1,5 @@
 {{#ifAll @root.data.auth (compare @root.request.params.query.reauth "!==" "true") ~}}
-{{> sign_out_loader}}
+{{> account_sign_out_loader}}
 <script>
   document.addEventListener("DOMContentLoaded", function(event) {
     window.setTimeout(function() {
@@ -22,14 +22,14 @@
         <div class="mdc-card__info--vacancy-title mdc-typography--headline5 x-padding">
           Before you can do that you must sign in again
         </div>
-      {{/if}} 
+      {{/if}}
     </div>
     <div class="mdc-card__info x-padding-full mdc-theme--primary-bg mdc-theme--on-primary" id="sign-in-message">
       <span id="form-message"></span>
     </div>
     <div class="mdc-card__info x-padding-full">
       <div class="mdc-typography--body1" id="form-section-email">
-        {{> sign_in_social loaderSelector="#sign-in-loader" messageSelector="#sign-in-message"}}
+        {{> account_sign_in_social loaderSelector="#sign-in-loader" messageSelector="#sign-in-message"}}
 
         <div class="middle-line-text">
           <span>or</span>
