Styling of new home page

--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -371,7 +371,6 @@ footer h3,
     max-width: 500px;
     margin: 0 auto;
     position: relative;
-    padding: $unit;
     background-color: rgba(255, 255, 255, 0.6);
   }
   .mdc-text-field {
@@ -413,8 +412,10 @@ footer h3,
     display: none;
   }
 }
+.sign-out-form .mdc-card,
 #sign-out-loader {
   display: flex;
+  background-color: transparent;
 }
 
 .card-loader {
@@ -434,6 +435,11 @@ footer h3,
     height: 100%;
     width: 100%;
   }
+}
+.sign-out-form {
+  display: flex;
+  min-height: 50vh;
+  width: 100%;
 }
 
 .provider-google.mdc-chip--selected,
