--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -1423,7 +1423,7 @@ footer,
       background-image: linear-gradient(60deg, rgba(0, 121, 106, 0.89), rgba(0, 121, 106, 0.91) 47%, transparent 47.08%, transparent);
       min-height: 40vh;
       background-color: transparent;
-      padding: 0 0 $unit*2;
+      // padding: 0 0 $unit*2;
       .mdc-card__actions {
         margin: 0;
         padding: 0;
