--- a/sites/configurations/fundingscotland/templates/pages/home.hbs
+++ b/sites/configurations/fundingscotland/templates/pages/home.hbs
@@ -2,22 +2,8 @@
   <!-- <div class="banner-search overlay" style="background-image: url('{{#if data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{/if}}');"> -->
   <div class="banner-search overlay" style="background-image: url('http://cms.scvo.org/wp-content/uploads/2018/03/THEGATHERING-22.02.18_0366.jpg');">
     <div class="content page-content">
-      <div class="overlay-content">
-        <div class="mdc-layout-grid">
-          <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-              <!-- <h1 class="header-text">
-                <span class="header-text-banner">
-                  <span class="normal welcome">Welcome to</span><br /><span class="normal brand">Funding Scotland</span>
-                </span>
-              </h1> -->
-              <p class="header-extra">
-                Find funding for your charity, community group or social enterprise using our free online search engine. From small grants to funding for big capital projects, we can help you track down the funding you need to make a difference in your community.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <!-- <div class="overlay-content">
+      </div> -->
       {{#if @root.data.auth ~}}
         <form id="search-view" class="search-form mdc-elevation--z5" action="/search" method="GET">
           <input type="hidden" name="lat" value="">
@@ -67,7 +53,23 @@
 
   <div class="mdc-layout-grid home-funds">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full latest-funds">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full latest-funds">
+        <p>
+          Funding Scotland exists to help charities, community groups and social enterprises find the money they need to realise their vision. From small grants to funding for big capital projects, we can help you track down the funding you need. We provide information on over 1200 funds which support Scottish projects. Funding Scotland only lists funders with a track record of supporting projects in Scotland. It includes grants, loans, prizes and other support. It does not include funding opportunities for individuals or private businesses. This website is owned and maintained by the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>, champions of the third sector in Scotland.
+        </p>
+        <p>
+          To start searching for funds, <a href="/">sign in</a>. For features such as email alerts, adding notes to your funds, and more, <a href="/premium">go premium</a>.
+        </p>
+        <p>
+          Or, go local. For information on funding in your area, check out:
+        </p>
+        <ul>
+          <li><a href="">Fife Funding Search</a></li>
+          <li><a href="">SRN Funding Search</a></li>
+          <li><a href="">etc</a></li>
+        </ul>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full latest-funds">
         <div class="mdc-typography--headline5 v-margin-full">
           Latest funds
         </div>
